--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
     
     steps:
     - name: Python Style Checker
-    - uses: andymckay/pycodestyle-action@0.1.3
+      uses: andymckay/pycodestyle-action@0.1.3
