--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,8 @@ jobs:
     steps:
     - name: Python Style Checker
       uses: andymckay/pycodestyle-action@0.1.3
+    - uses: actions/checkout@master
+      with:
+        fetch-depth: 1
+    - name: Check Markdown links
+      uses: gaurav-nelson/github-action-markdown-link-check@0.4.0
