--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Python Style Checker
-      uses: andymckay/pycodestyle-action@0.1.3
     - uses: actions/checkout@master
       with:
         fetch-depth: 1
-    - name: Check Markdown links
+    - name: Check Markdown Links
       uses: gaurav-nelson/github-action-markdown-link-check@0.4.0
+    - name: Python Style Checker
+      uses: andymckay/pycodestyle-action@0.1.3
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
+        architecture: 'x64' # (x64 or x86)
+    - name: Python Code Comment Rate
+      run: python ./tools/python_comment_count.py
