--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
         fetch-depth: 1
     - name: Check Markdown links
       uses: gaurav-nelson/github-action-markdown-link-check@0.4.0
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
-        architecture: 'x64' # (x64 or x86)
-    - name: Python Code Comment Rate
-      run: python ./tools/python_comment_count.py
+    # - uses: actions/setup-python@v1
+    #   with:
+    #     python-version: '3.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
+    #     architecture: 'x64' # (x64 or x86)
+    # - name: Python Code Comment Rate
+    #   run: python ./tools/python_comment_count.py
