--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,20 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Python Style Checker
-      uses: andymckay/pycodestyle-action@0.1.3
     - uses: actions/checkout@master
       with:
         fetch-depth: 1
-    - name: Check Markdown links
-      uses: gaurav-nelson/github-action-markdown-link-check@0.4.0
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Python Style Checker
+      uses: andymckay/pycodestyle-action@0.1.3
     - name: Python Code Comment Rate
       run: python ./tools/python_comment_count.py
+    - name: Check Markdown links
+      uses: gaurav-nelson/github-action-markdown-link-check@0.4.0
