ci: 🎡 Remove dead markdown link
Add config for ignore dead link

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -1,7 +1,9 @@
 {
-    "ignorePatterns": [
-        {
+    "ignorePatterns": [{
             "pattern": "^https://leetcode.com"
+        },
+        {
+            "pattern": "^http://tldp.org"
         }
     ]
 }
